# ansible_on_vyos

./: .gitignore  ansible-navigator.yaml  debug.yaml  init.sh  pyproject.toml  test.txt  test.yml
ansible_practice/: lint_error.yml
ansible_practice/00_markdown/: 1_ansible-navigator.md  2_vyos.md  3_vyos_module.md  4-2_copy_file_module.md  4_debug.md  5_variable.md  6_condition.md  7_loop.md  8_general-practice.md  98_ansible_basic.md
ansible_practice/03_vyos/: inventory_2.ini  test.yaml  vyos_module_exam_1.yml  vyos_module_exam_2.yml  vyos_module_exam_3.yml  vyos_module_exam_4.yml  vyos_module_sample.yml  vyos_module_sample_2.yml  vyos_module_sample_4.yml
ansible_practice/04-2_copy_file/: copy_file_module_exam_1.yml  copy_file_module_exam_2.yml  copy_file_module_exam_3.yml  copy_module_exam_2.yml  copy_module_sample.yml  file_module_sample.yml  vyos_module_exam_2.yml  vyos_module_exam_3.yml
ansible_practice/04_debug/: debug_module_exam_1.yml  debug_module_exam_2.yml  debug_module_exam_3.yml  debug_module_exam_3_sample.yml  debug_module_sample.yml  debug_test.yml  test.yml
ansible_practice/05_variable/: .test_variable.yml.swp  variable_exam_1.yml  variable_exam_2.yml  variable_exam_3-1.yml  variable_exam_3.yml  variable_exam_3_inventory_hostname.yml  variable_exam_3_play.yml  variable_sample_1.yml  variable_sample_2.yml  variable_sample_3.yml  variable_sample_4.yml
ansible_practice/07_loop/: loop_exam_1.yml  (+5 more)
execution_environment/: execution-environment.yml
init_settings/: container_setting.yml  docker-compose.yml  docker-compose_test.yml  init_install.yml
(+86 files in other folders)
